git: ignores .obj files

--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,7 @@ dmypy.json
 *.jpg
 *.xml
 *.zip
+*.obj
 
 # exception for this repo (so the images for the README.md), and maybe other stuff, can be uplaoded.
 !resources/*
